[package]
name = "libspeedster-tech"
version = "0.1.0"
edition = "2021"
authors = ["mosfatino <das.dias6@gmail.com>"]
description = "Speedster Technology File Parser tool"
repository = "https://github.com/das-dias/libspeedster-tech"
license = "BSD-3-Clause"
exclude = ["resources",]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#local deps
libspeedster-util = {path = "/Users/dasdias/Documents/SoftwareProjects/libspeedster-util", version = "0.1.0"}

# external deps
once_cell = "1.8.0" # single instance cell synchronized assignment
derive_builder = "0.11.1" #runtime implementation of builder pattern for arbitrary structures
derive_more = "0.99.0" # additional traits for basic types
num-traits = "0.2"
num-derive = "0.3" # derive custom traits for my own types of data 
rust_decimal = {version = "1.14.3"} # dedicated decimal number crate
serde = {version = "1.0.136", features = ["derive"]} # serde is a serialization and deserialization framework for rust data structures
serde_derive = "1.0.136"
serde_json = "1.0.79"
tempfile = {version = "3.3.0", optional = true} # framework for creating, destroying and managing temporary files with rust

# developer dependencies
[dev-dependencies]
tempfile = {version = "3.3.0"}

[features]
selftest = ["tempfile"]